Commit 21/05 choire: Fix bug Collapse and expand header.

--- a/style1.css
+++ b/style1.css
@@ -68,6 +68,10 @@
         display: block;
         margin: 22px;
     }
+    .menu--mbtb2{
+        display: block;
+        margin: 22px;
+    }
 }
 @media only screen and (max-width: 575px){
     .header__menu {
